--- a/files/editFs.html
+++ b/files/editFs.html
@@ -38,7 +38,7 @@
     <table>
         <tr>
             <td>Files:</td>
-            <td><input type='button' value='Get List' onClick='getList()'> | <input type='button' value='Save File' onClick='saveFile()'> | <span id='curF'>None</span></td>
+            <td><input type='button' value='Get List' onClick='getList()'> <input type='button' value='Save File' onClick='saveFile()'> <span id='curF'>None</span></td>
         </tr>
         <tr>
             <td valign='top'><div id='fList'></div></td>
