--- a/files/fb_edit.html
+++ b/files/fb_edit.html
@@ -51,6 +51,13 @@
       <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='▶'/>
       <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='✓'/>
     <br>
+
+      <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='‧'/>
+      <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='┆'/>
+      <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='┊'/>
+      <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='▨'/>
+      <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='≈'/>
+    <br>
       <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='€'/>
       <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='★'/>
       <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='∎'/>
