--- a/files/fb_edit.html
+++ b/files/fb_edit.html
@@ -30,6 +30,11 @@
     function retrieve(ob) { setT(ob); id('basic').innerText = localStorage.getItem("facebook_edit"); Foc(); }
     function setT(ob) { ob.style.backgroundColor = 'blue'; setTimeout(function(){ ob.style.backgroundColor = ''; }, 600); }
     function Foc() { id('basic').focus(); }
+    function manageEnter(event) {
+      var key = event.which || event.keyCode;
+      if(key===13) { fDoc('insertHTML', '<br>'); return false; } return true;
+    }
+
 </script>
 </head>
 <body bgColor='#111111' onload='Foc()'>
@@ -149,7 +154,7 @@
       <INPUT class='iS' type='button' onClick='fDoc("insertText",this)' value='⑩'/>
 
   </div>
-  <div id='basic' contentEditable=true style='font:normal 16pt Ubuntu,Verdana,Arimo; background-color:black; color:lightgreen; margin-right:80px; position:absolute; top:30px; left: 330px; border:1px solid #222222; padding:100px; outline:none;'></div>
+  <div id='basic' contentEditable=true onKeyDown='return manageEnter(event);' style='font:normal 16pt Ubuntu,Verdana,Arimo; background-color:black; color:lightgreen; margin-right:80px; position:absolute; top:30px; left: 330px; border:1px solid #222222; padding:100px; outline:none;'></div>
 
 </body>
 </html>
