--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@ BODY {
 Styling pages:<br/>
 <ul>
 	<li><a class='hl' href="files/ProEmail.html">Email (simple)</a></li>
-	<li><a class='hl' href="files/pros.html">Pro Style Email</a></li>
-	<li><a class='hl' href="files/prostyle.html">Pro Style Extended Email</a></li>
-	<li><a class='hl' href="files/ProEmailAuto.html">Auto Pro Email Styling</a></li>
+	<li><a class='hl' href="files/RichEmail.html">Rich Email Body</a></li>
+	<li><a class='hl' href="files/ProEmailAuto.html">Email Styling</a></li>
 	<li><a class='hl' href="files/rtf.html">Rich Text Editor</a></li>
 	<li><a class='hl' href="files/newPDF.html">PDF Editor</a></li>
 </ul>
