--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -63,7 +63,7 @@
     .txtStyle ol {list-style: none; counter-reset: li; }
     .txtStyle ol li {counter-increment: li; margin-bottom:1em; }
     .txtStyle ol li::before {content: counter(li); color: red; display: inline-block;
-      width: 1.2em; margin-left: -2.2em; margin-right: 1em; text-align: right; direction: rtl}
+      width: 1.2em; margin-left: -2.2em; margin-right: 1em; text-align: right; direction: rtl }
     */
 
 /*------------------------ Blue Style -------------------------*/
@@ -78,7 +78,7 @@
     .blueStyle i { color:#33a; }
     .blueStyle u { text-decoration:none; border-bottom:2px solid blue; }
     .blueStyle hr { border:none; border-top:1px dashed #99d; height:0px; }
-    .blueStyle sup, .txtStyle sub { color:blue; font-size:.7em; }
+    .blueStyle sup, .blueStyle sub { color:blue; font-size:.7em; }
     .blueStyle strike { color:#33a; }
     .blueStyle H1 { border: 1px solid #224; font-size:1.4em; color:#fff;
       background-color:#669; padding: 14px; border-radius:8px; font-weight:normal;
@@ -108,10 +108,10 @@
     .yelStyle i { color:#b22; }
     .yelStyle u { text-decoration:none; border-bottom:1px solid red; }
     .yelStyle hr { border:none; border-top:1px dashed #b96; height:0px; }
-    .yelStyle sup, .txtStyle sub { color:red; font-size:.7em; }
+    .yelStyle sup, .yelStyle sub { color:red; font-size:.7em; }
     .yelStyle strike { color:#b22; }
-    .yelStyle H1 { border: 1px solid #f09030; font-size:1.4em; color:#fff;
-      background-color:#ff9933; padding: 14px; border-radius:8px; font-weight:normal;
+    .yelStyle H1 { border: 1px solid #cc8; font-size:1.4em;
+      background-color:#ee4; padding: 14px; border-radius:8px; font-weight:normal;
     }
     .yelStyle H2 { border: 1px solid #ed4; font-size: 1em;
       background-color:#fff; padding: 16px; border-radius:8px; font-weight:normal;
@@ -133,7 +133,7 @@
       background-color:#eee; line-height: 1.3;
     }
     .nrmStyle hr { border:none; border-top:1px dashed #99b; height:0px; }
-    .nrmStyle sup, .txtStyle sub { color:red; font-size:.7em; }
+    .nrmStyle sup, .nrmStyle sub { color:red; font-size:.7em; }
     .nrmStyle H1 { border: 1px solid #444; font-size:1.4em; color:#fff;
       background-color:#666; padding: 14px; border-radius:8px; font-weight:normal;
     }
@@ -169,6 +169,7 @@
   <button onClick='exe("italic", null)' title='Italic'><i class="fa fa-italic"></i></button>
   <button onClick='exe("underline", null)' title='Underline'><i class="fa fa-underline"></i></button>
   <button onClick='exe("strikeThrough",null)' title='Strikethrough'><i class="fa fa-strikethrough" style='font-size:11px;'></i></button>
+  <button onClick='exe("hiliteColor","#ff4")' title='Yellow highlight'><i class="fa fa-paint-brush"></i></button>
 
   | <button onClick='exe("justifyleft",null)' title='Align left'><i class="fa fa-align-left"></i></button>
   <button onClick='exe("justifycenter",null)' title='Align center'><i class="fa fa-align-center"></i></button>
@@ -193,7 +194,8 @@
   | <button onClick='incFontSize()' title='Change Font Size'><i class="fa fa-text-width"></i></button>
   <button onClick='insTable()' title='List of items'><i class="fa fa-table"></i></button>
   <button onClick='insLink()' title='Insert link'><i class="fa fa-link"></i></button>
-  <button onClick='show_modal()' title='Settings'><i class="fa fa-gear"></i></button>
+  <button onClick='show_modal(false)' title='Edit HTML'><i class="fa fa-file-code-o"></i></button>
+  <button onClick='show_modal(true)' title='Edit Style Sheet'><i class="fa fa-file-text-o"></i></button>
 
   | <button onClick='ins(this)' title='Flag'>⚑</button>
   <button onClick='ins(this)' title='Pen'>✎</button>
@@ -224,22 +226,15 @@
 
 </div>
 <div id='inCapsul' style='overflow-y:auto'>
-<table><tr><td id='txt' class='txtStyle' contentEditable>
-  <h1>Header of the main section</h1>
-  He has <b>favoured</b> building a <i>sub-$30,000</i> subcompact and <u>building</u> and <strike>selling</strike> electric.
-  <H2>Subtitle of the second section</H2>
-  He has favoured building a sub-$30,000 subcompact and building and selling electric vehicle power train components so that other automakers can produce electric vehicles at affordable prices without having to develop the products in house.<br>
-  <br><hr><br>He has favoured building a sub-$30,000 subcompact.<br>Quotation:
-  <blockquote>He has favoured building a sub-$30,000 subcompact and building and selling electric vehicle power train components so that other automakers can produce electric vehicles at affordable prices without having to develop the products in house.</blockquote>
-  <br><br>Several mainstream publications<sup>2</sup> have compared him with Henry Ford for his work on advanced vehicle power trains.<br>
-  Unordered list:<ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul><hr>Ordered list:<ol><li>Coffee</li><li>Tea</li><li>Milk</li></ol>
-</td></tr></table>
+<table><tr><td id='txt' class='txtStyle' contentEditable>...</td></tr></table>
 </div>
 
 <div id="modal-w" class="modal">
   <div class="modal-content">
     <span class="modal-close" onClick='modal_shut()'>&times;</span>
-    <div id='modal-out' style='max-height:400px;overflow-y:auto'></div>
+    <!-- <div id='modal-out' style='max-height:400px;overflow-y:auto'></div> -->
+    <textArea id='modal-out' style='font:normal 10pt Tahoma,Sans-serif; height:400px; width:100%; overflow-y:auto'></textArea>
+    <button onClick='Modal_OK()'>Modify</button>
   </div>
 </div>
 
@@ -302,6 +297,8 @@
     d2.style.height = (h - d1.offsetHeight - M) + 'px';
   }
   
+  reSize();
+
   function insQuote() {
     let s = window.getSelection().toString(); if(s=='') s='...';
     exe('insertHTML','<table><tr><td q1>❝</td><td q2>' + s + '</table>');
@@ -311,24 +308,49 @@
     var Fs = prompt('Enter Ordered/Unordered + number of row (ex: o3, u5):','u3');
     if(Fs && (Fs.charAt(0)=='o' || Fs.charAt(0)=='u')) {
       const F = Fs.charAt(0)=='u'?true:false, r = parseInt(Fs.substr(1),10);
-      var T = '<table>';
+      var T = '<table border="0">';
       for(let i=0; i<r; i++)
-      T += '<tr><td qL>' + (F?'•':(i+1)+'.') +'</td><td q2>...</td></tr>';
+      T += '<tr><td qL>' + (F?'▸':(i+1)+'.') +'</td><td q2>...</td></tr>';
       exe('insertHTML', T + '</table>');
     }
   }
   
-  reSize();
+  var Modal = id("modal-w"), patt, modal_mode = true;
 
-  var Modal = id("modal-w");
-  
-  function show_modal() {
-    id("modal-out").textContent = T.innerHTML;
-    Modal.style.display = "block";
+  function winClick(event) {
+    if(event.target == Modal) {
+      Modal.style.display = "none";
+      window.removeEventListener("click", winClick);
+    }
   }
-  function modal_shut() { Modal.style.display = "none"; }
-  window.onclick = function(event) {
-    if (event.target == Modal) Modal.style.display = "none";
+  
+  function show_modal(fl) {
+    modal_mode = fl;
+    id("modal-out").value = fl?getCurrStyle():T.innerHTML.trim();
+    Modal.style.display = "block";
+    window.addEventListener("click", winClick);
+  }
+  
+  function modal_shut() { Modal.style.display = "none"; window.removeEventListener("click", winClick); }
+
+  function getCurrStyle() {
+    const el = document.querySelector('select');
+    const w = el.options[el.selectedIndex].value;
+    const s = document.querySelector("style").textContent;
+    const x1 = s.indexOf(w), x2 = s.indexOf('}',s.lastIndexOf(w)+1);
+    
+    patt = new RegExp('\\.'+w+'[\\s\\S]+\\.'+w+'[\\s\\S]+?}');
+    const arr = s.match(patt);
+    return arr[0];
+  }
+  
+  function Modal_OK() {
+    if(modal_mode) {
+      const s = document.querySelector("style");
+      s.textContent = s.textContent.replace(patt,id("modal-out").value);
+    }
+    else T.innerHTML = id("modal-out").value;
+    modal_shut();
   }
 
 </script>
