--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -148,6 +148,36 @@
     .nrmStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
     .nrmStyle td[q2] { vertical-align: top; padding-left:12px; }
 
+/*------------------------ Black Style -------------------------*/
+    .blckStyle {
+      border:1px solid #002; padding:40px; border-radius:8px;
+      font: normal .9em Sans-serif; outline:none;
+      background-color:#334; line-height: 1.3; color:#aae;
+    }
+    .blckStyle b {
+      background-color:#000; padding:0px 6px; border-radius:4px; font-weight:normal;
+    }
+    .blckStyle i { color:#fff; }
+    .blckStyle u { text-decoration:none; border-bottom:2px solid #000; }
+    .blckStyle hr { border:none; border-top:1px dashed #000; height:0px; }
+    .blckStyle sup, .blckStyle sub { color:#000; font-size:.7em; font-weight: bold; }
+    .blckStyle strike { color:#000; }
+    .blckStyle H1 { font-size:1.4em; color:#aae;
+      background-color:#000; padding: 14px; border-radius:8px; font-weight:normal;
+    }
+    .blckStyle H2 { font-size: 1em; color:#000;
+      background-color:#779; padding: 16px; border-radius:8px; font-weight:normal;
+    }
+    .blckStyle blockquote { padding-left:12px;
+      border-left: 8px solid #000;
+    }
+    .blckStyle span[blockOK] { color:#fff; background-color:darkgreen; padding:0px 6px; border-radius:4px; }
+    .blckStyle span[blockNo] { color:#fff; background-color:darkred; padding:0px 6px; border-radius:4px; }
+
+    .blckStyle td[qL] { vertical-align: top; padding-right:12px; color:#000; text-align:right; width: 60px; }
+    .blckStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#000; text-align:right; width: 60px; border-right:1px solid #000; }
+    .blckStyle td[q2] { vertical-align: top; padding-left:12px; }
+
   </style>
 </head>
 <body style="font-size:12pt" margin='10px' onResize='reSize()'>
@@ -162,7 +192,8 @@
         <option value='txtStyle' selected>Grey</option>
         <option value='blueStyle'>Blue</option>
         <option value='yelStyle'>Yellow</option>
-        <option value='nrmStyle'>Normal</option>
+        <option value='nrmStyle'>Normal</option>blckStyle
+        <option value='blckStyle'>Black</option>
   </select>
 
   <button onClick='exe("bold",null)' title='Bold'><i class="fa fa-bold"></i></button>
@@ -219,9 +250,10 @@
   <button onClick='cul(this)' title='Dark red font' style='color:darkred'>▣</button>
   <button onClick='cul(this)' title='Blue font' style='color:blue'>▣</button>
   <button onClick='cul(this)' title='Green font' style='color:green'>▣</button>
+  <button onClick='cul(this)' title='Black font' style='color:black'>▣</button>
   <button onClick='cul(this)' title='Custom color' style='color:'>▨</button>
 
-  <button onClick='insYesNo(true)' title='OK confirmation (green)'><i class="fa fa-check"></i><i class="fa fa-font" style='font-size:11px;'></i></button>
+  | <button onClick='insYesNo(true)' title='OK confirmation (green)'><i class="fa fa-check"></i><i class="fa fa-font" style='font-size:11px;'></i></button>
   <button onClick='insYesNo(false)' title='Bad confirmation (red)'><i class="fa fa-remove"></i><i class="fa fa-font" style='font-size:11px;'></i></button>
 
 </div>
@@ -298,6 +330,11 @@
   }
   
   reSize();
+  
+  T.addEventListener("paste",function(e) {
+    e.preventDefault();
+    exe('insertHTML', e.clipboardData.getData('text/plain'));
+  });
 
   function insQuote() {
     let s = window.getSelection().toString(); if(s=='') s='...';
@@ -314,6 +351,8 @@
       exe('insertHTML', T + '</table>');
     }
   }
+  
+  function Cleanse() { exe('insertHTML',window.getSelection().toString()); }
   
   var Modal = id("modal-w"), patt, modal_mode = true;
 
