--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -25,6 +25,9 @@
     .modal-close { color: #aaaaaa; float: right; font-size: 28px; font-weight: bold; }
     .modal-close:hover { color: #000; cursor: pointer; }
 
+    code[block="1"] { color:#fff; background-color:#080; padding:0px 6px; border-radius:4px; }
+    code[block="0"] { color:#fff; background-color:#c00; padding:0px 6px; border-radius:4px; }
+
 /*------------------------ Grey Style -------------------------*/
     .txtStyle {
       border:1px solid #ddd; padding:40px; border-radius:8px;
@@ -48,13 +51,15 @@
     .txtStyle blockquote { padding-left:12px;
       border-left: 8px solid #ccc;
     }
-    .txtStyle span[blockOK] { color:#fff; background-color:darkgreen; padding:0px 6px; border-radius:4px; }
-    .txtStyle span[blockNo] { color:#fff; background-color:darkred; padding:0px 6px; border-radius:4px; }
 
 /*.TB { font:normal 1em Sans-serif; }*/
     .txtStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; }
     .txtStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
     .txtStyle td[q2] { vertical-align: top; padding-left:12px; }
+
+    .txtStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#fff;
+      background-color:#666; padding:6px; border-radius:8px; text-align:center; }
+
     /*
     .txtStyle ul { list-style: none; }
     .txtStyle ul li { margin-bottom:1em; }
@@ -89,12 +94,13 @@
     .blueStyle blockquote { padding-left:12px;
       border-left: 8px solid #cce;
     }
-    .blueStyle span[blockOK] { color:#fff; background-color:darkgreen; padding:0px 6px; border-radius:4px; }
-    .blueStyle span[blockNo] { color:#fff; background-color:darkred; padding:0px 6px; border-radius:4px; }
 
     .blueStyle td[qL] { vertical-align: top; padding-right:12px; color:blue; text-align:right; width: 60px; }
     .blueStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccd; text-align:right; width: 60px; border-right:1px solid #ccd; }
     .blueStyle td[q2] { vertical-align: top; padding-left:12px; }
+
+    .blueStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#fff;
+      background-color:#669; padding:6px; border-radius:8px; text-align:center; }
 
 /*------------------------ Yellow Style -------------------------*/
     .yelStyle {
@@ -119,13 +125,13 @@
     .yelStyle blockquote { padding-left:12px;
       border-left: 8px solid #ffdf80;
     }
-    .yelStyle span[blockOK] { color:#fff; background-color:darkgreen; padding:0px 6px; border-radius:4px; }
-    .yelStyle span[blockNo] { color:#fff; background-color:darkred; padding:0px 6px; border-radius:4px; }
 
     .yelStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; }
     .yelStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ffdf80; text-align:right; width: 60px; border-right:1px solid #ffdf80; }
     .yelStyle td[q2] { vertical-align: top; padding-left:12px; }
 
+    .yelStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#622;
+      background-color:#ee4; padding:6px; border-radius:8px; text-align:center; }
 /*------------------------ Normal Style -------------------------*/
     .nrmStyle {
       border:1px solid #ddd; padding:40px; border-radius:8px;
@@ -148,6 +154,8 @@
     .nrmStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
     .nrmStyle td[q2] { vertical-align: top; padding-left:12px; }
 
+    .nrmStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#fff;
+      background-color:#666; padding:6px; border-radius:8px; text-align:center; }
 /*------------------------ Black Style -------------------------*/
     .blckStyle {
       border:1px solid #002; padding:40px; border-radius:8px;
@@ -171,12 +179,13 @@
     .blckStyle blockquote { padding-left:12px;
       border-left: 8px solid #000;
     }
-    .blckStyle span[blockOK] { color:#fff; background-color:darkgreen; padding:0px 6px; border-radius:4px; }
-    .blckStyle span[blockNo] { color:#fff; background-color:darkred; padding:0px 6px; border-radius:4px; }
 
     .blckStyle td[qL] { vertical-align: top; padding-right:12px; color:#000; text-align:right; width: 60px; }
     .blckStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#000; text-align:right; width: 60px; border-right:1px solid #000; }
     .blckStyle td[q2] { vertical-align: top; padding-left:12px; }
+
+    .blckStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#aae;
+      background-color:#000; padding:6px; border-radius:8px; text-align:center; }
 
   </style>
 </head>
@@ -253,12 +262,12 @@
   <button onClick='cul(this)' title='Black font' style='color:black'>▣</button>
   <button onClick='cul(this)' title='Custom color' style='color:'>▨</button>
 
-  | <button onClick='insYesNo(true)' title='OK confirmation (green)'><i class="fa fa-check"></i><i class="fa fa-font" style='font-size:11px;'></i></button>
-  <button onClick='insYesNo(false)' title='Bad confirmation (red)'><i class="fa fa-remove"></i><i class="fa fa-font" style='font-size:11px;'></i></button>
+  | <button onClick='insYesNo(1)' title='OK confirmation (green)'><i class="fa fa-check"></i><i class="fa fa-font" style='font-size:11px;'></i></button>
+  <button onClick='insYesNo(0)' title='Bad confirmation (red)'><i class="fa fa-remove"></i><i class="fa fa-font" style='font-size:11px;'></i></button>
 
 </div>
 <div id='inCapsul' style='overflow-y:auto'>
-<table><tr><td id='txt' class='txtStyle' contentEditable>...</td></tr></table>
+<table><tr><td id='txt' class='txtStyle' contentEditable>.../td></tr></table>
 </div>
 
 <div id="modal-w" class="modal">
@@ -319,7 +328,7 @@
     if(Fs && Fs != '') exe("insertHTML", '<span style="font-size:'+ Fs + '">' + s + '</span>');
   }
 
-  function insYesNo(F) { exe("insertHTML", '<span ' + (F?'blockOK':'blockNo')  + '>' + (F?'✓&nbsp;OK':'✘&nbsp;No') + '</span>'); }
+  function insYesNo(F) { exe("insertHTML", '<code block="'+ F  + '">' + (F?'✓ OK':'✘ No') + '</code>'); }
   
   function reSize() {
     const w = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
@@ -329,12 +338,15 @@
     d2.style.height = (h - d1.offsetHeight - M) + 'px';
   }
   
-  reSize();
+  reSize(); T.focus();
   
   T.addEventListener("paste",function(e) {
     e.preventDefault();
     exe('insertHTML', e.clipboardData.getData('text/plain'));
   });
+/*T.addEventListener("paste",function() { setTimeout( function()
+    { T.innerHTML = T.innerHTML.replace(/<div>/gi,'').replace(/<\/div><br>|<\/div>/gi,'<br>'); } ,0);
+  });*/
 
   function insQuote() {
     let s = window.getSelection().toString(); if(s=='') s='...';
@@ -342,12 +354,14 @@
   }
   
   function insTable() {
-    var Fs = prompt('Enter Ordered/Unordered + number of row (ex: o3, u5):','u3');
-    if(Fs && (Fs.charAt(0)=='o' || Fs.charAt(0)=='u')) {
-      const F = Fs.charAt(0)=='u'?true:false, r = parseInt(Fs.substr(1),10);
+    var cnt = -1, arr, s = window.getSelection().toString();
+        if(s) { arr = s.split('\n'); cnt = arr.length; }
+    var Fs = prompt('Enter Ordered/Unordered/Enum + number of row (ex: o3, u5, e4):','u'+(cnt>-1?cnt-1:3));
+    if(Fs && (Fs.charAt(0)=='o' || Fs.charAt(0)=='u'  || Fs.charAt(0)=='e')) {
+      const F = Fs.charAt(0), r = parseInt(Fs.substr(1),10);
       var T = '<table border="0">';
       for(let i=0; i<r; i++)
-      T += '<tr><td qL>' + (F?'▸':(i+1)+'.') +'</td><td q2>...</td></tr>';
+      T += '<tr><td qL>' + (F=='u'?'▸':(F=='o'?(i+1)+'.':('<span enum>'+ String.fromCharCode(65+i) +'</span>'))) +'</td><td q2>'+ (i<cnt?arr[i]:'...') +'</td></tr>';
       exe('insertHTML', T + '</table>');
     }
   }
@@ -376,8 +390,7 @@
     const el = document.querySelector('select');
     const w = el.options[el.selectedIndex].value;
     const s = document.querySelector("style").textContent;
-    const x1 = s.indexOf(w), x2 = s.indexOf('}',s.lastIndexOf(w)+1);
-    
+
     patt = new RegExp('\\.'+w+'[\\s\\S]+\\.'+w+'[\\s\\S]+?}');
     const arr = s.match(patt);
     return arr[0];
