--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -267,7 +267,7 @@
 
 </div>
 <div id='inCapsul' style='overflow-y:auto'>
-<table><tr><td id='txt' class='txtStyle' contentEditable>.../td></tr></table>
+<table><tr><td id='txt' class='txtStyle' contentEditable>...</td></tr></table>
 </div>
 
 <div id="modal-w" class="modal">
