--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -31,7 +31,7 @@
 /*------------------------ Grey Style -------------------------*/
     .txtStyle {
       border:1px solid #ddd; padding:40px; border-radius:8px;
-      font: normal .9em Sans-serif; outline:none;
+      font: normal 10.5pt Sans-serif; outline:none;
       background-color:#eee; line-height: 1.3;
     }
     .txtStyle b { border: 1px solid #ccc;
@@ -40,41 +40,26 @@
     .txtStyle i { color:darkred; }
     .txtStyle u { text-decoration:none; border-bottom:1px solid red; }
     .txtStyle hr { border:none; border-top:1px dashed #99b; height:0px; }
-    .txtStyle sup, .txtStyle sub { color:red; font-size:.7em; }
+    .txtStyle sup, .txtStyle sub { color:red; font-size:7pt; }
     .txtStyle strike { color:darkred; }
-    .txtStyle H1 { border: 1px solid #444; font-size:1.4em; color:#fff;
+    .txtStyle H1 { border: 1px solid #444; font-size:16pt; color:#fff;
       background-color:#666; padding: 14px; border-radius:8px; font-weight:normal;
     }
-    .txtStyle H2 { border: 1px solid #ccc; font-size: 1em;
+    .txtStyle H2 { border: 1px solid #ccc; font-size: 10.5pt;
       background-color:#fff; padding: 16px; border-radius:8px; font-weight:normal;
     }
-    .txtStyle blockquote { padding-left:12px;
-      border-left: 8px solid #ccc;
-    }
-
 /*.TB { font:normal 1em Sans-serif; }*/
     .txtStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; }
-    .txtStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
+    .txtStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
     .txtStyle td[q2] { vertical-align: top; padding-left:12px; }
 
     .txtStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#fff;
       background-color:#666; padding:6px; border-radius:8px; text-align:center; }
 
-    /*
-    .txtStyle ul { list-style: none; }
-    .txtStyle ul li { margin-bottom:1em; }
-    .txtStyle ul li::before {content: "•"; color: red; display: inline-block;
-      width: 1.4em; margin-left: -1.4em;}
-    .txtStyle ol {list-style: none; counter-reset: li; }
-    .txtStyle ol li {counter-increment: li; margin-bottom:1em; }
-    .txtStyle ol li::before {content: counter(li); color: red; display: inline-block;
-      width: 1.2em; margin-left: -2.2em; margin-right: 1em; text-align: right; direction: rtl }
-    */
-
 /*------------------------ Blue Style -------------------------*/
     .blueStyle {
       border:1px solid #dde; padding:40px; border-radius:8px;
-      font: normal .8em Verdana,Sans-serif; outline:none;
+      font: normal 10pt Verdana,Sans-serif; outline:none;
       background-color:#eef; line-height: 1.3; color:#224;
     }
     .blueStyle b { border: 1px solid #ccd; color:#228;
@@ -83,20 +68,17 @@
     .blueStyle i { color:#33a; }
     .blueStyle u { text-decoration:none; border-bottom:2px solid blue; }
     .blueStyle hr { border:none; border-top:1px dashed #99d; height:0px; }
-    .blueStyle sup, .blueStyle sub { color:blue; font-size:.7em; }
+    .blueStyle sup, .blueStyle sub { color:blue; font-size:7pt; }
     .blueStyle strike { color:#33a; }
-    .blueStyle H1 { border: 1px solid #224; font-size:1.4em; color:#fff;
+    .blueStyle H1 { border: 1px solid #224; font-size:16pt; color:#fff;
       background-color:#669; padding: 14px; border-radius:8px; font-weight:normal;
     }
-    .blueStyle H2 { border: 1px solid #ccd; font-size: 1em;
+    .blueStyle H2 { border: 1px solid #ccd; font-size: 10pt;
       background-color:#fff; padding: 16px; border-radius:8px; font-weight:normal;
-    }
-    .blueStyle blockquote { padding-left:12px;
-      border-left: 8px solid #cce;
     }
 
     .blueStyle td[qL] { vertical-align: top; padding-right:12px; color:blue; text-align:right; width: 60px; }
-    .blueStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccd; text-align:right; width: 60px; border-right:1px solid #ccd; }
+    .blueStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#ccd; text-align:right; width: 60px; border-right:1px solid #ccd; }
     .blueStyle td[q2] { vertical-align: top; padding-left:12px; }
 
     .blueStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#fff;
@@ -105,7 +87,7 @@
 /*------------------------ Yellow Style -------------------------*/
     .yelStyle {
       border:1px solid #edd; padding:40px; border-radius:8px;
-      font: normal .9em Sans-serif; outline:none;
+      font: normal 10.5pt Sans-serif; outline:none;
       background-color:#ffa; line-height: 1.3; color:#622;
     }
     .yelStyle b { border: 1px solid #ed4; color:#622;
@@ -114,20 +96,17 @@
     .yelStyle i { color:#b22; }
     .yelStyle u { text-decoration:none; border-bottom:1px solid red; }
     .yelStyle hr { border:none; border-top:1px dashed #b96; height:0px; }
-    .yelStyle sup, .yelStyle sub { color:red; font-size:.7em; }
+    .yelStyle sup, .yelStyle sub { color:red; font-size:7pt; }
     .yelStyle strike { color:#b22; }
-    .yelStyle H1 { border: 1px solid #cc8; font-size:1.4em;
+    .yelStyle H1 { border: 1px solid #cc8; font-size:16pt;
       background-color:#ee4; padding: 14px; border-radius:8px; font-weight:normal;
     }
-    .yelStyle H2 { border: 1px solid #ed4; font-size: 1em;
+    .yelStyle H2 { border: 1px solid #ed4; font-size: 10.5pt;
       background-color:#fff; padding: 16px; border-radius:8px; font-weight:normal;
-    }
-    .yelStyle blockquote { padding-left:12px;
-      border-left: 8px solid #ffdf80;
     }
 
     .yelStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; }
-    .yelStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ffdf80; text-align:right; width: 60px; border-right:1px solid #ffdf80; }
+    .yelStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#ffdf80; text-align:right; width: 60px; border-right:1px solid #ffdf80; }
     .yelStyle td[q2] { vertical-align: top; padding-left:12px; }
 
     .yelStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#622;
@@ -135,23 +114,20 @@
 /*------------------------ Normal Style -------------------------*/
     .nrmStyle {
       border:1px solid #ddd; padding:40px; border-radius:8px;
-      font: normal .8em Verdana, Sans-serif; outline:none;
+      font: normal 10pt Verdana, Sans-serif; outline:none;
       background-color:#eee; line-height: 1.3;
     }
     .nrmStyle hr { border:none; border-top:1px dashed #99b; height:0px; }
-    .nrmStyle sup, .nrmStyle sub { color:red; font-size:.7em; }
-    .nrmStyle H1 { border: 1px solid #444; font-size:1.4em; color:#fff;
+    .nrmStyle sup, .nrmStyle sub { color:red; font-size:7pt; }
+    .nrmStyle H1 { border: 1px solid #444; font-size:16pt; color:#fff;
       background-color:#666; padding: 14px; border-radius:8px; font-weight:normal;
     }
-    .nrmStyle H2 { border: 1px solid #ccc; font-size: 1em;
+    .nrmStyle H2 { border: 1px solid #ccc; font-size: 10pt;
       background-color:#fff; padding: 16px; border-radius:8px; font-weight:normal;
-    }
-    .nrmStyle blockquote { padding-left:12px;
-      border-left: 8px solid #ccc;
     }
 
     .nrmStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; }
-    .nrmStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
+    .nrmStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
     .nrmStyle td[q2] { vertical-align: top; padding-left:12px; }
 
     .nrmStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#fff;
@@ -159,7 +135,7 @@
 /*------------------------ Black Style -------------------------*/
     .blckStyle {
       border:1px solid #002; padding:40px; border-radius:8px;
-      font: normal .9em Sans-serif; outline:none;
+      font: normal 10.5pt Sans-serif; outline:none;
       background-color:#334; line-height: 1.3; color:#aae;
     }
     .blckStyle b {
@@ -168,20 +144,17 @@
     .blckStyle i { color:#fff; }
     .blckStyle u { text-decoration:none; border-bottom:2px solid #000; }
     .blckStyle hr { border:none; border-top:1px dashed #000; height:0px; }
-    .blckStyle sup, .blckStyle sub { color:#000; font-size:.7em; font-weight: bold; }
+    .blckStyle sup, .blckStyle sub { color:#000; font-size:7pt; font-weight: bold; }
     .blckStyle strike { color:#000; }
-    .blckStyle H1 { font-size:1.4em; color:#aae;
+    .blckStyle H1 { font-size:16pt; color:#aae;
       background-color:#000; padding: 14px; border-radius:8px; font-weight:normal;
     }
-    .blckStyle H2 { font-size: 1em; color:#000;
+    .blckStyle H2 { font-size: 10.5pt; color:#000;
       background-color:#779; padding: 16px; border-radius:8px; font-weight:normal;
-    }
-    .blckStyle blockquote { padding-left:12px;
-      border-left: 8px solid #000;
     }
 
     .blckStyle td[qL] { vertical-align: top; padding-right:12px; color:#000; text-align:right; width: 60px; }
-    .blckStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#000; text-align:right; width: 60px; border-right:1px solid #000; }
+    .blckStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#000; text-align:right; width: 60px; border-right:1px solid #000; }
     .blckStyle td[q2] { vertical-align: top; padding-left:12px; }
 
     .blckStyle span[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#aae;
@@ -211,10 +184,10 @@
   <button onClick='exe("strikeThrough",null)' title='Strikethrough'><i class="fa fa-strikethrough" style='font-size:11px;'></i></button>
   <button onClick='exe("hiliteColor","#ff4")' title='Yellow highlight'><i class="fa fa-paint-brush"></i></button>
 
-  | <button onClick='exe("justifyleft",null)' title='Align left'><i class="fa fa-align-left"></i></button>
-  <button onClick='exe("justifycenter",null)' title='Align center'><i class="fa fa-align-center"></i></button>
-  <button onClick='exe("justifyright",null)' title='Align right'><i class="fa fa-align-right"></i></button>
-  <button onClick='exe("justifyFull",null)' title='Justify'><i class="fa fa-align-justify"></i></button>
+  | <button onClick='just("left")' title='Align left'><i class="fa fa-align-left"></i></button>
+  <button onClick='just("center")' title='Align center'><i class="fa fa-align-center"></i></button>
+  <button onClick='just("right")' title='Align right'><i class="fa fa-align-right"></i></button>
+  <button onClick='just("justify")' title='Justify'><i class="fa fa-align-justify"></i></button>
 
   | <button onClick='exe("insertunorderedlist",null)' title='Unordered list'><i class="fa fa-list-ul"></i></button>
   <button onClick='exe("insertorderedlist",null)' title='Ordered list'><i class="fa fa-list-ol"></i></button>
@@ -324,8 +297,13 @@
 
   function incFontSize() {
     let s = window.getSelection().toString();
-    var Fs = prompt('Enter new Font Size here:','2em');
+    var Fs = prompt('Enter new Font Size here:','14pt');
     if(Fs && Fs != '') exe("insertHTML", '<span style="font-size:'+ Fs + '">' + s + '</span>');
+  }
+
+  function just(j) {
+    const c = window.getSelection().toString(); if(!c) return;
+    exe("insertHTML", '<div style="text-align:'+ j + '">' + c + '</div>');
   }
 
   function insYesNo(F) { exe("insertHTML", '<code block="'+ F  + '">' + (F?'✓ OK':'✘ No') + '</code>'); }
@@ -354,14 +332,14 @@
   }
   
   function insTable() {
-    var cnt = -1, arr, s = window.getSelection().toString();
+    var F, cnt = -1, arr, s = window.getSelection().toString();
         if(s) { arr = s.split('\n'); cnt = arr.length; }
-    var Fs = prompt('Enter Ordered/Unordered/Enum + number of row (ex: o3, u5, e4):','u'+(cnt>-1?cnt-1:3));
-    if(Fs && (Fs.charAt(0)=='o' || Fs.charAt(0)=='u'  || Fs.charAt(0)=='e')) {
-      const F = Fs.charAt(0), r = parseInt(Fs.substr(1),10);
-      var T = '<table border="0">';
+    var Fs = prompt('Enter Ordered/Unordered/Enum/Big + number of row (ex: o3, u5, e4, b5):','u'+(cnt>-1?cnt-1:3));
+    if(Fs && ('oueb'.indexOf(F=Fs.charAt(0))>-1)) {
+      var r = parseInt(Fs.substr(1),10), pref = (F!='b')?'<tr><td qL>':'<tr><td q1>'; if(F=='b') F='o';
+      var T = '<table border="0" cellSpacing="0">';
       for(let i=0; i<r; i++)
-      T += '<tr><td qL>' + (F=='u'?'▸':(F=='o'?(i+1)+'.':('<span enum>'+ String.fromCharCode(65+i) +'</span>'))) +'</td><td q2>'+ (i<cnt?arr[i]:'...') +'</td></tr>';
+      T += pref + (F=='u'?'▸':(F=='o'?(i+1)+'.':('<span enum>'+ String.fromCharCode(65+i) +'</span>'))) +'</td><td q2>'+ (i<cnt?arr[i]:'...') +'</td></tr>';
       exe('insertHTML', T + '</table>');
     }
   }
